<resources>
    <string name="app_name">MDC</string>
    <string name="nav_header_title">Components</string>
    <string name="button">Button</string>
    <string name="fabs">Fabs</string>
    <string name="text_fields">Text Fields</string>
    <string name="cards">Card</string>
    <string name="label">Label</string>
    <string name="page_title">Components</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="chips">Chips</string>
    <string name="choice1">Choice1</string>
    <string name="choice2">Choice2</string>
    <string name="choice3">Choice3</string>
    <string name="textAppearance">Text Appearance</string>
</resources>