<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_baseline_menu_24"
            app:title="@string/page_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/tv_button"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_button" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                style="?attr/materialButtonStyle.OutlinedButton"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button"
                app:layout_constraintEnd_toStartOf="@id/button3"
                app:layout_constraintStart_toEndOf="@id/button1"
                app:layout_constraintTop_toBottomOf="@id/tv_button" />

            <Button
                android:id="@+id/button3"
                style="?attr/materialButtonStyle.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_button" />

            <TextView
                android:id="@+id/textField"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/text_fields"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTextLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTextLayout2"
                style="?attr/textInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:hint="@string/label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputTextLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cards"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/cards"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputTextLayout2" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cards">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="?attr/textAppearanceHeadline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:text="@string/title" />

                    <TextView
                        style="?attr/textAppearanceSubtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginBottom="@dimen/margin_16dp"
                        android:text="@string/description" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/chips"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/chips"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView1" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/choice1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/choice2"
                app:layout_constraintStart_toEndOf="@id/chip1"
                app:layout_constraintTop_toBottomOf="@id/chips" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/choice3"
                app:layout_constraintStart_toEndOf="@id/chip2"
                app:layout_constraintTop_toBottomOf="@id/chips" />

            <TextView
                android:id="@+id/textAppearance"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/textAppearance"
                app:layout_constraintTop_toBottomOf="@id/chip1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading1"
                style="?attr/textAppearanceHeadline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H1"
                app:layout_constraintTop_toBottomOf="@id/textAppearance"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading2"
                style="?attr/textAppearanceHeadline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H2"
                app:layout_constraintTop_toBottomOf="@id/heading1"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading3"
                style="?attr/textAppearanceHeadline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H3"
                app:layout_constraintTop_toBottomOf="@id/heading2"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading4"
                style="?attr/textAppearanceHeadline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H4"
                app:layout_constraintTop_toBottomOf="@id/heading3"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading5"
                style="?attr/textAppearanceHeadline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H5"
                app:layout_constraintTop_toBottomOf="@id/heading4"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/heading6"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="H6"
                app:layout_constraintTop_toBottomOf="@id/heading5"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/subtitle1"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="Subtitle1"
                app:layout_constraintTop_toBottomOf="@id/heading6"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/subtitle2"
                style="?attr/textAppearanceSubtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:text="Subtitle2"
                app:layout_constraintTop_toBottomOf="@id/subtitle1"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>